--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 author:
   name             : "Kamil Szymański"
   avatar           : "/assets/images/bio-photo.png"
-  bio              : "product-minded software developer, problem solver, JVM & open-source enthusiast"
+  bio              : "technical business partner, product-minded software developer, IT consultant"
   location         : "Warsaw (Poland)"
   email            : kamil.szymanski.dev@gmail.com
   links:
